WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143659
String.prototype.startsWith/endsWith/includes have wrong length in
r182673
https://bugs.webkit.org/show_bug.cgi?id=143659
Summary
String.prototype.startsWith/endsWith/includes have wrong length in r182673
Jordan Harband
Reported
2015-04-12 23:06:58 PDT
In
r182673
nightly, String.prototype.startsWith and String.prototype.endsWith both have a length of 0. According to
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-string.prototype.startswith
and
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-string.prototype.endswith
the length of both should explicitly be 1, since they have 1 required argument.
Attachments
Patch
(6.25 KB, patch)
2015-04-15 16:18 PDT
,
Jordan Harband
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jordan Harband
Comment 1
2015-04-15 16:04:06 PDT
***
Bug 143660
has been marked as a duplicate of this bug. ***
Jordan Harband
Comment 2
2015-04-15 16:18:34 PDT
Created
attachment 250881
[details]
Patch
WebKit Commit Bot
Comment 3
2015-04-15 17:16:14 PDT
Comment on
attachment 250881
[details]
Patch Clearing flags on attachment: 250881 Committed
r182872
: <
http://trac.webkit.org/changeset/182872
>
WebKit Commit Bot
Comment 4
2015-04-15 17:16:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug