String.prototype.startsWith/endsWith/includes have wrong length in r182673 https://bugs.webkit.org/show_bug.cgi?id=143659

Patch by Jordan Harband <ljharb@gmail.com> on 2015-04-15
Reviewed by Benjamin Poulain.

Source/JavaScriptCore:

Fix lengths of String.prototype.{includes,startsWith,endsWith} per spec
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-string.prototype.includes
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-string.prototype.startswith
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-string.prototype.endswith

* runtime/StringPrototype.cpp:
(JSC::StringPrototype::finishCreation):

LayoutTests:

* js/script-tests/string-includes.js:
* js/string-includes-expected.txt:

Canonical link: https://commits.webkit.org/161813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182872 268f45cc-cd09-0410-ab3c-d52691b4dbfc